[package]
name = "biver"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive", "env"] }
chrono = { version = "0.4.43", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
colored = "3.1.1"
bs58 = "0.5.1"
chrono-humanize = "0.2.3"
egui = "0.33.3"
eframe = "0.33.3"
image = "0.25.9"
